# physgui

./: .gitignore  FlPhys.cs  LICENSE  MainWindow.cs  Makefile  PhysGui.sln  physgui.csproj  physgui.sln  test.yaml
engine/: .clang-format  CMakeLists.txt  flphys.c  flphys.h  types.h
src/: FlPhys.cs  Program.cs  YamlSerialize.cs
src/PhysGui/: Drawer.cs  FlPhys.cs  MainWindow.cs  MainWindow.glade  PhysGl.cs  PhysGui.csproj  Program.cs  YamlLoader.cs  YamlSerialize.cs
src/PhysGui/flphys/: CMakeLists.txt  flphysgl.c
src/flphys/: .clang-format  CMakeLists.txt  flphys.c  types.h
src/flphys/embed/: CMakeLists.txt  embed_file.cmake  generate_all_embedded_files.cmake  register_embedded_file.cmake
src/flphys/phys/: CMakeLists.txt  phys.c
src/flphys/physgl/: CMakeLists.txt  physgl.c  physgl.h
src/flphys/physgl/shaders/: fragmentShader.frag  vertexShader.vert  vertextShader.vert
tests/: GetSetTests.cs  MoonOrbitTests.cs  ParabolaTest.cs  tests.csproj
tests/PhysGui.Tests/: GetSetTests.cs  MoonOrbitTests.cs  ParabolaTest.cs  PhysGui.Tests.csproj
